<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="สำหรับอาจารย์"
        android:id="@+id/textView"
        android:textColor="#fff9fff3"
        android:textSize="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="รหัสวิชา : "
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff9fff3"
            android:textSize="20dp"
            android:gravity="center" />

        <Spinner
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:gravity="center"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="ช่วงเวลา : "
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff9fff3"
            android:textSize="20dp"
            android:gravity="center" />

        <Spinner
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner2"
            android:gravity="center"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Q1"
            android:textColor="#fff9fff3"
            android:textSize="20dp"
            android:layout_marginBottom="5dp" />

        <RadioGroup
            android:id="@+id/ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:checkedButton="@+id/ans1_11"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="QR Code"
                android:id="@+id/ans1_1"
                android:textColor="#fff9fff3"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/ans1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1_2"
                android:textColor="#fff9fff3"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/ans1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1_3"
                android:textColor="#fff9fff3"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/ans1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1_4"
                android:textColor="#fff9fff3"
                android:textSize="15dp" />
            <RadioButton
                android:id="@+id/ans1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1_5"
                android:textColor="#fff9fff3"
                android:textSize="15dp" />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="เลือก"
                android:id="@+id/btnChose"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ปิดการเช็คชื่อ"
                android:id="@+id/btnCheckout"
                android:layout_weight="1"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ดูประวัติการเช็คชื่อ"
                android:id="@+id/btnHistory"
                android:layout_weight="1"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="สแกน บาร์โค้ด ของนิสิต"
        android:id="@+id/btnBarcode"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>